--- a/zg-blog-front/pom.xml
+++ b/zg-blog-front/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>pagehelper</artifactId>
             <version>5.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
